# simple_otel_py

./: .env  .gitignore  ot.py.old  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: publish.yml
opentelemetry_helper/: opentelemetry_helper.py
simple_otel_py/: __init__.py  simple_otel.py
